Community fully updated. Created one new stylesheet and javascript file do to overlapping issues. Search bar is now fully functioning with only accepting right code.

--- a/Style/StyleSheet.css
+++ b/Style/StyleSheet.css
@@ -92,6 +92,7 @@ button {
     font-family: 'whatafont_expandedexpanded';
 }
 
+
 .table {
     width: 90%;
     margin-left: 8%;
@@ -120,59 +121,72 @@ span
     margin-left: 650px;
 }
 
-.tab {
-    overflow: initial;
-    border: 2px double white;
-    background-color: white;
-    text-align: center;
-    
-    font-family: Whata;
+/* SEARCH BAR*/
+* {
+    box-sizing: border-box;
 }
 
-    .tab button {
-        background-color: inherit;
-        border: none;
-        display: inline-block;
-        outline: none;
-        cursor: pointer;
-        padding: 6px 12px;
-        transition: 0.3s;
-        font-size: 17px;
-        line-height: 3em;
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+    overflow: hidden;
+    background-color: blue;
+}
+
+    .topnav a {
+        float: left;
+        display: block;
         color: black;
         text-align: center;
-        font-family: 'whatafont_expandedexpanded';
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
     }
 
-        .tab button.active {
-            background-color: cornflowerblue;
+        .topnav a:hover {
+            background-color: blue;
+            color: black;
         }
 
-.tabcontent {
-    display: none;
-    text-align: center;
-    padding-block: 6px 12px;
-    border: 1px solid blue;
-    background-color: cornflowerblue;
-    border-top: none;
-    font-family: 'whatafont_expandedexpanded';
+        .topnav a.active {
+            background-color: #2196F3;
+            color: white;
+        }
+
+    .topnav input[type=text] {
+        float: right;
+        padding: 6px;
+        margin-top: 8px;
+        margin-right: 16px;
+        border: none;
+        font-size: 17px;
+    }
+
+@media screen and (max-width: 600px) {
+    .topnav a, .topnav input[type=text] {
+        float: none;
+        display: block;
+        text-align: left;
+        width: 100%;
+        margin: 0;
+        padding: 14px;
+    }
+
+    .topnav input[type=text] {
+        border: 1px solid #ccc;
+    }
 }
 
-.space 
-{
-    margin-top: 160px;
+/* Search Bar*/
+.search {
+    background-color: blue;
+    width: 5%;
+    display: contents;
+    align-content: baseline;
 }
 
-.bigdot{
-    list-style:none;
-    text-align: center;
-}
 
-.img_ {
-    border: 10px double white;
-}
 
-.footer_
-{
-    margin-block: 160px 200px;
-}
